[project]
name = "day7"
version = "0.1.0"
description = "A ReAct-style AI agent using Groq that can search the web and do math to answer questions""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ddgs>=9.14.4",
    "groq>=1.5.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
]
